# Alter-Ego

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AUTHORS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  Untitled-1.js  book.toml  bot.js  commandHandler.js  config.json  credentials.json  docker-compose.yml  example_moderator.js  game.json  global.d.ts  mdbook-admonish.css  package-lock.json  package.json  settings.json  tsconfig.json  vitest.config.ts
Classes/: BotCommand.js  BotContext.js  EligibleCommand.js  GameCommunicationHandler.js  GameConstants.js  GameEntityFinder.js  GameEntityLoader.js  GameEntityManager.js  GameEntitySaver.js  GameLogHandler.js  GameLogger.js  GameNarrationHandler.js  GameNotificationGenerator.js  GameSettings.js  GuildContext.js  ModeratorCommand.js  PlayerCommand.js  PrettyPrinter.js  PriorityQueue.js  StackQueue.js  Timer.js
Commands/: addplayer_moderator.js  alive.js  clean_moderator.js  craft_moderator.js  craft_player.js  createroomcategory_moderator.js  dead.js  dead_moderator.js  delete_moderator.js  destroy_bot.js  destroy_moderator.js  died.js  dress_moderator.js  dress_player.js  drop.js  drop_moderator.js  drop_player.js  dumplog_moderator.js  editmode_moderator.js  end_bot.js  end_moderator.js  endgame.js  endgame_moderator.js  equip_moderator.js  equip_player.js  example_bot.js  example_moderator.js  example_player.js  exit_bot.js  exit_moderator.js  find_moderator.js  fixture_bot.js  (+118 more)
crates/localize/: Cargo.toml  test.js
crates/localize/src/: config.rs  format.rs  lib.rs  stringtable.rs
(+475 files in other folders)
