[package]
name = "localize"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
isolang = { version = "2.4.0", features = ["serde"] }
napi = { version = "3", features = ["napi10"] }
napi-derive = "3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"

[build-dependencies]
napi-build = "2"
